--- a/index.html
+++ b/index.html
@@ -25,9 +25,35 @@
             -webkit-appearance: none;
             margin: 0;
         }
+        .error-msg {
+            display: none;
+            color: #ef4444;
+            font-size: 0.75rem;
+            margin-top: 0.25rem;
+            font-weight: 600;
+        }
+        /* Modal Backdrop Blur */
+        #modal-overlay {
+            backdrop-filter: blur(4px);
+            z-index: 1000;
+        }
     </style>
 </head>
 <body class="bg-gray-50 min-h-screen font-sans text-gray-800">
+
+    <!-- MODAL PERINGATAN (DI TENGAH LAYAR) -->
+    <div id="modal-overlay" class="fixed inset-0 bg-black/50 hidden flex items-center justify-center p-4">
+        <div class="bg-white rounded-2xl shadow-2xl max-w-sm w-full p-6 text-center fade-in">
+            <div class="w-16 h-16 bg-red-100 text-red-600 rounded-full flex items-center justify-center mx-auto mb-4">
+                <i data-lucide="alert-circle" class="w-8 h-8"></i>
+            </div>
+            <h3 class="text-xl font-bold text-gray-900 mb-2" id="modal-title">Data Tidak Valid</h3>
+            <p class="text-gray-600 text-sm mb-6" id="modal-message">Mohon periksa kembali input Anda.</p>
+            <button onclick="closeModal()" class="w-full bg-blue-600 text-white font-bold py-3 rounded-xl hover:bg-blue-700 transition active:scale-95 shadow-lg shadow-blue-200">
+                Saya Mengerti
+            </button>
+        </div>
+    </div>
 
     <nav class="bg-white shadow-md border-b-4 border-blue-600 sticky top-0 z-50">
         <div class="max-w-4xl mx-auto px-4 py-3 flex flex-col items-center gap-1">
@@ -63,8 +89,9 @@
                         </div>
 
                         <div>
-                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. Kartu Keluarga (Harus 16 Digit)</label>
-                            <input type="number" id="no_kk" required oninput="limitDigits(this, 16)" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
+                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. Kartu Keluarga (16 Digit)</label>
+                            <input type="number" id="no_kk" required oninput="limitDigits(this, 16); validateInputLength(this, 16)" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
+                            <p id="error-no_kk" class="error-msg text-red-500 text-[10px] mt-1 hidden italic">Peringatan: Nomor KK harus tepat 16 digit.</p>
                         </div>
 
                         <div>
@@ -73,8 +100,9 @@
                         </div>
 
                         <div>
-                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. KTP (Harus 16 Digit)</label>
-                            <input type="number" id="nik" required oninput="limitDigits(this, 16)" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
+                            <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. KTP (16 Digit)</label>
+                            <input type="number" id="nik" required oninput="limitDigits(this, 16); validateInputLength(this, 16)" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="317101XXXXXXXXXX">
+                            <p id="error-nik" class="error-msg text-red-500 text-[10px] mt-1 hidden italic">Peringatan: NIK/KTP harus tepat 16 digit.</p>
                         </div>
 
                         <div>
@@ -84,7 +112,8 @@
 
                         <div>
                             <label class="block text-xs font-semibold text-gray-500 uppercase mb-1">No. Kartu ATM (16 atau 18 Digit)</label>
-                            <input type="number" id="no_atm" required oninput="limitDigits(this, 18)" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="6013XXXXXXXXXXXX">
+                            <input type="number" id="no_atm" required oninput="limitDigits(this, 18); validateATM(this)" class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 outline-none font-mono" placeholder="6013XXXXXXXXXXXX">
+                            <p id="error-no_atm" class="error-msg text-red-500 text-[10px] mt-1 hidden italic">Peringatan: Nomor ATM harus 16 atau 18 digit.</p>
                         </div>
 
                         <div>
@@ -164,10 +193,6 @@
                                 <p>Jakarta Pusat</p>
                             </div>
                         </div>
-                        <div class="flex flex-col">
-                            <span class="text-gray-500 text-[10px] uppercase font-bold tracking-wider mb-1">Status</span>
-                            <span class="inline-flex items-center px-2 py-1 rounded-md text-[10px] font-bold bg-yellow-100 text-yellow-800 w-fit">MENUNGGU VERIFIKASI</span>
-                        </div>
                     </div>
 
                     <button onclick="resetForm()" class="w-full bg-gray-100 text-gray-700 font-bold py-3 rounded-xl hover:bg-gray-200 transition text-sm">
@@ -177,37 +202,20 @@
             </div>
         </div>
 
-        <!-- VIEW: VERIFIKASI ADMIN -->
-        <div id="view-verifikasi" class="hidden fade-in max-w-md mx-auto">
-            <div class="bg-white rounded-2xl shadow-2xl border border-gray-200 p-6">
-                <h1 class="text-lg font-bold mb-6 text-center text-gray-800 flex flex-col items-center gap-2">
-                    <img src="logo-rptra.png" alt="Logo RPTRA" class="h-8 w-auto mb-1" onerror="this.src='https://placehold.co/80x30/f3f4f6/3b82f6?text=RPTRA';">
-                    <span class="text-blue-900">Verifikasi Pengambilan</span>
-                </h1>
-
-                <div id="verifikasi-data" class="hidden">
-                    <div class="bg-gray-50 p-5 rounded-2xl border border-gray-200 space-y-4 text-sm mb-6 relative overflow-hidden">
-                        <div id="watermark-status" class="absolute inset-0 flex items-center justify-center opacity-10 pointer-events-none text-3xl font-black rotate-[-30deg]"></div>
-                        <div class="grid grid-cols-2 gap-4">
-                            <div class="flex flex-col"><span class="text-gray-400 text-[10px] uppercase font-bold">ID Pesanan</span><span id="v-id" class="font-mono text-blue-700 font-bold"></span></div>
-                            <div class="flex flex-col"><span class="text-gray-400 text-[10px] uppercase font-bold">Kategori</span><span id="v-kategori" class="font-bold"></span></div>
-                        </div>
-                        <div class="flex flex-col"><span class="text-gray-400 text-[10px] uppercase font-bold">Nama Pemilik ATM</span><span id="v-nama" class="font-bold text-gray-800 text-base"></span></div>
-                        <div class="flex flex-col border-b pb-2"><span class="text-gray-400 text-[10px] uppercase font-bold">No. Kartu ATM</span><span id="v-no-atm" class="font-mono"></span></div>
-                        <div id="v-produk" class="flex flex-wrap gap-2 pt-2"></div>
-                    </div>
-
-                    <button id="btn-approve" onclick="approvePesanan()" class="w-full bg-green-600 text-white font-bold py-4 rounded-xl hover:bg-green-700 transition shadow-lg">
-                        Konfirmasi Penyerahan
-                    </button>
-                    <button onclick="window.location.href = window.location.pathname" class="w-full mt-4 text-gray-400 text-xs py-2">Batal</button>
-                </div>
-            </div>
-        </div>
-
     </main>
 
     <script>
+        // Modal Logic
+        function openModal(title, message) {
+            document.getElementById('modal-title').textContent = title;
+            document.getElementById('modal-message').textContent = message;
+            document.getElementById('modal-overlay').classList.remove('hidden');
+        }
+
+        function closeModal() {
+            document.getElementById('modal-overlay').classList.add('hidden');
+        }
+
         function validateLetters(input) {
             input.value = input.value.replace(/[^a-zA-Z\s]/g, '');
         }
@@ -215,6 +223,29 @@
         function limitDigits(input, max) {
             if (input.value.length > max) {
                 input.value = input.value.slice(0, max);
+            }
+        }
+
+        function validateInputLength(input, target) {
+            const errorElement = document.getElementById('error-' + input.id);
+            if (input.value.length > 0 && input.value.length !== target) {
+                errorElement.classList.remove('hidden');
+                input.classList.add('border-red-500', 'ring-1', 'ring-red-200');
+            } else {
+                errorElement.classList.add('hidden');
+                input.classList.remove('border-red-500', 'ring-1', 'ring-red-200');
+            }
+        }
+
+        function validateATM(input) {
+            const errorElement = document.getElementById('error-no_atm');
+            const len = input.value.length;
+            if (len > 0 && len !== 16 && len !== 18) {
+                errorElement.classList.remove('hidden');
+                input.classList.add('border-red-500', 'ring-1', 'ring-red-200');
+            } else {
+                errorElement.classList.add('hidden');
+                input.classList.remove('border-red-500', 'ring-1', 'ring-red-200');
             }
         }
 
@@ -227,8 +258,6 @@
             { id: 'susu', nama: 'Susu UHT 1 Karton', harga: 'Rp 30.000' },
         ];
 
-        let pesananAktif = null;
-
         function initDB() {
             if (!localStorage.getItem('db_pesanan')) localStorage.setItem('db_pesanan', JSON.stringify([]));
         }
@@ -238,14 +267,6 @@
             const p = getPesanan();
             p.push(data);
             localStorage.setItem('db_pesanan', JSON.stringify(p));
-        }
-        function updateStatusPesanan(id, status) {
-            const p = getPesanan();
-            const idx = p.findIndex(x => x.id === id);
-            if(idx !== -1) {
-                p[idx].status = status;
-                localStorage.setItem('db_pesanan', JSON.stringify(p));
-            }
         }
 
         function renderProduk() {
@@ -289,16 +310,31 @@
             const kategori = document.getElementById('kategori_penerima').value;
             const nama_pengisi = document.getElementById('nama_pengisi').value;
             
-            // Validasi Digit
-            if (nik.length !== 16) return alert("No. KTP harus 16 digit.");
-            if (no_kk.length !== 16) return alert("No. Kartu Keluarga harus 16 digit.");
-            if (no_atm.length !== 16 && no_atm.length !== 18) return alert("No. Kartu ATM harus 16 atau 18 digit.");
+            // Validasi Kritis menggunakan Modal Kustom
+            if (no_kk.length < 16) {
+                openModal("Nomor KK Tidak Valid", "Nomor Kartu Keluarga yang Anda masukkan kurang dari 16 digit. Silakan periksa kembali.");
+                return;
+            }
+
+            if (nik.length < 16) {
+                openModal("Nomor KTP Tidak Valid", "Nomor KTP (NIK) yang Anda masukkan kurang dari 16 digit. Silakan lengkapi data Anda.");
+                return;
+            }
+
+            // Validasi Nomor ATM (16 atau 18)
+            if (no_atm.length !== 16 && no_atm.length !== 18) {
+                openModal("Nomor ATM Tidak Valid", "Nomor Kartu ATM harus berjumlah 16 atau 18 digit.");
+                return;
+            }
 
             const prod = Array.from(document.querySelectorAll('input[name="produk"]:checked')).map(c => {
                 return KOMODITAS_LIST.find(k => k.id === c.value).nama;
             });
 
-            if(prod.length === 0) return alert("Pilih minimal 1 komoditas.");
+            if(prod.length === 0) {
+                openModal("Komoditas Kosong", "Silakan pilih minimal satu jenis komoditas pangan.");
+                return;
+            }
 
             const id = `PPB-${Math.floor(1000 + Math.random() * 9000)}`;
             const waktuSekarang = getFormattedDate();
@@ -340,42 +376,10 @@
 
         function resetForm() { window.location.href = window.location.pathname; }
 
-        function autoVerify(id) {
-            const pesanan = getPesanan().find(p => p.id === id.toUpperCase());
-            if (!pesanan) return;
-            document.getElementById('view-form').classList.add('hidden');
-            document.getElementById('view-verifikasi').classList.remove('hidden');
-            pesananAktif = pesanan;
-            document.getElementById('verifikasi-data').classList.remove('hidden');
-            document.getElementById('v-id').textContent = pesanan.id;
-            document.getElementById('v-nama').textContent = pesanan.nama;
-            document.getElementById('v-no-atm').textContent = pesanan.no_atm;
-            document.getElementById('v-kategori').textContent = pesanan.kategori;
-            const prodContainer = document.getElementById('v-produk');
-            prodContainer.innerHTML = '';
-            pesanan.produkNama.forEach(n => { 
-                const span = document.createElement('span'); 
-                span.className = "bg-blue-100 text-blue-700 px-3 py-1 rounded-lg text-xs font-bold";
-                span.textContent = n; 
-                prodContainer.appendChild(span); 
-            });
-            if (window.lucide) lucide.createIcons();
-        }
-
-        function approvePesanan() {
-            if(!pesananAktif) return;
-            updateStatusPesanan(pesananAktif.id, 'Selesai');
-            alert("Berhasil Diverifikasi!");
-            window.location.href = window.location.pathname;
-        }
-
         window.onload = () => {
             initDB();
             renderProduk(); 
             if (window.lucide) lucide.createIcons();
-            const urlParams = new URLSearchParams(window.location.search);
-            const vId = urlParams.get('verify');
-            if (vId) autoVerify(vId);
         };
     </script>
 </body>
